--- a/notebook/Sample_servomotor.ipynb
+++ b/notebook/Sample_servomotor.ipynb
@@ -1,12 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# jetson nano サーボモーターサンプルプログラム"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## はじめに\n",
+    "\n",
+    "`jetson`でサーボモーターのようなハードが関わっているようなプログラムを動作させようとすると環境構築が毎回大変です．\n",
+    "\n",
+    "そこで，`docker-compose`でワンパンで構築できるようにしました．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 初期化"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Docker 内で作られたファイルは`root`権限になってしまう．そうすると`VSCode`で編集できないため，ここで権限を緩める．"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "!chmod 777 -R /home/jetson-nano-servomotor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`docker-compose` でマウントした作業フォルダに移動"
    ]
   },
   {
@@ -27,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "現在位置の確認"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -41,6 +87,22 @@
    ],
    "source": [
     "!pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 動作確認"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### デバイスの確認．\n",
+    "\n",
+    "ここで`i2c`関係のものが無ければマウントする必要がある．"
    ]
   },
   {
@@ -115,6 +177,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`i2c`の確認．\n",
+    "\n",
+    "下記のようになっていれば問題なし．\n",
+    "\n",
+    "```bash\n",
+    "     0  1  2  3  4  5  6  7  8  9  a  b  c  d  e  f\n",
+    "00:          -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "10: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "20: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "30: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "40: 40 -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "50: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "60: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- \n",
+    "70: 70 -- -- -- -- -- -- --  \n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -137,6 +220,16 @@
    ],
    "source": [
     "!i2cdetect -y -r 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### サンプルプログラム\n",
+    "\n",
+    "こちらを実行すると動作するはず．\n",
+    "\n"
    ]
   },
   {
@@ -178,7 +271,7 @@
     "# Import the PCA9685 module.\n",
     "import Adafruit_PCA9685\n",
     " \n",
-    " \n",
+    "\n",
     "# Uncomment to enable debug output.\n",
     "#import logging\n",
     "#logging.basicConfig(level=logging.DEBUG)\n",
